Fix scrollbar in the debug app

--- a/www/debug/app-debug.less
+++ b/www/debug/app-debug.less
@@ -20,6 +20,7 @@
     #cp-app-debug {
         flex: 1;
         display: flex;
+        min-height: 0;
     }
     #cp-app-debug-content {
         flex: 1;
